RESOLVED FIXED 58277
RenderIndicator and ShadowBlockElement are no longer used.
https://bugs.webkit.org/show_bug.cgi?id=58277
Summary RenderIndicator and ShadowBlockElement are no longer used.
Hajime Morrita
Reported 2011-04-11 15:26:22 PDT
They are no longer used. We should remove them.
Attachments
Patch (20.83 KB, patch)
2011-04-11 15:37 PDT, Hajime Morrita
rniwa: review+
morrita: commit-queue-
Hajime Morrita
Comment 1 2011-04-11 15:37:08 PDT
Ryosuke Niwa
Comment 2 2011-04-11 15:40:36 PDT
Comment on attachment 89105 [details] Patch looks sane to me.
Hajime Morrita
Comment 3 2011-04-12 09:24:51 PDT
Note You need to log in before you can comment on or make changes to this bug.