2011-04-11  MORITA Hajime  <morrita@google.com>

Reviewed by Ryosuke Niwa.

        RenderIndicator and ShadowBlockElement are no longer used.
        https://bugs.webkit.org/show_bug.cgi?id=58277

        Removed RenderIndicator and ShadowBlockElement.

        No new tests. Just removed unused code.

        * CMakeLists.txt:
        * GNUmakefile.list.am:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * rendering/RenderIndicator.cpp: Removed.
        * rendering/RenderIndicator.h: Removed.
        * rendering/RenderMeter.h:
        * rendering/RenderingAllInOne.cpp:
        * rendering/ShadowElement.cpp:
        * rendering/ShadowElement.h:

Canonical link: https://commits.webkit.org/73356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83596 268f45cc-cd09-0410-ab3c-d52691b4dbfc